--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -29,15 +29,15 @@ jobs:
       run:
         shell: bash
         working-directory: ./terraform
-        
+
     steps:
       - name: Checkout source code 
         uses: actions/checkout@v4
 
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v2
-        # with:
-        #   terraform_version: 1.7.6
+        with:
+          terraform_version: 1.6.3
           
       - name: Terraform Init
         id: Init
